# ohw24_proj_catalog_us

./: .gitignore  OHW_project_list.md  OHW_project_table.md  OHW_projects_textmining.ipynb  README.md  _config.yml  db.sqlite3  index.html  manage.py  pyproject.toml
proj_catalog/: asgi.py  settings.py  urls.py  wsgi.py
projects/: admin.py  models.py
projects/migrations/: 0001_initial.py  0002_project_repo_alter_dataset_description_and_more.py  0003_rename_events_event_alter_project_datasets.py
web_scraping/: project_list_final.csv  scrape_all_urls.ipynb
