[project]
name = "ohw24_proj_catalog_us"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Alex Kerney", email = "abk@mac.com"}]
requires-python = ">= 3.11"
dependencies = [ "django>=5.1,<6", "django-distill>=3.2.7,<3.3"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

# [tool.pixi.pypi-dependencies]
# ohw24_proj_catalog_us = { path = ".", editable = true }

[tool.pixi.tasks]
serve = "python manage.py runserver"
migrate = "python manage.py migrate"
make-migrations = "python manage.py makemigrations"
